[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "teachbooks-questions"
dynamic=["version"]
description = "A Sphinx extension to create and include multiple-choice and short-answer questions."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dennis den Ouden-van der Horst", email = "d.denouden-vanderhorst@tudelft.nl" 
]
dependencies = [
    "sphinx"
]

requires-python = ">=3.10"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/teachbooks_questions/_version.py"
